md for github hosting

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="UTF-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  	<meta name="author" content="Mira Technologies">
+  	<meta name="description" content="Login to your Mira Technologies Bootcamp Dashboard page">
+  	<meta name="keywords" content="Mira Technologies, programming, bootcamp, learn, code">
+  	<title>Mira Bootcamp | Login</title>
+  	<link rel="icon" href="assets/images/miraicon.png" type="image/ico" sizes="16x16">
 	<!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
     <style type="text/css">
     	html {
-		  height: 100vh;
+		  /*height: 100vh;*/
 		}
 
 		body {
@@ -52,7 +56,6 @@
 	      </div>
 	    </nav>
 	</header>
-
 	<main class="container login-body">
 	    <div class="row">
 	      <div class="col s0 m3"></div>
@@ -65,7 +68,6 @@
 		            <p>Login to your account</p>
 		          </div>
 		        </div>
-
 		        <form id="login-form" style="padding:30px;" class="card-panel">
 		          <div class="row">
 		            <div class="input-field col s12">
@@ -87,7 +89,6 @@
 		            <br>
 		          </div>
 		        </form>
-
 		        <div class="col s12 center-align">
 		          <a class="center indigo-text text-darken-4" href="forgot.html">Forgot Password</a>
 		        </div>
